welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var m:String 
    ^BDRBuggle:3: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
	m=ecritMessage();
          ^BDRBuggle:4: error: not found: value A
	if (m==A) {avance();}
               ^BDRBuggle:5: error: not found: value R
	else if (m==R) {droite();avance();}
                    ^BDRBuggle:6: error: not found: value L
	else if (m==L) {gauche();avance();}
                    ^BDRBuggle:7: error: not found: value I
	else if (m==I) {gauche();gauche();avance();}
                    ^BDRBuggle:8: error: not found: value B
	else if (m==B) {avance();avance();}
                    ^BDRBuggle:9: error: not found: value C
	else if (m==C) {avance();avance();avance();}
                    ^BDRBuggle:10: error: not found: value Z
	else if (m==Z) {recule();}
                    ^BDRBuggle:11: error: not found: value X
	else if (m==X) {recule();recule();recule();}
                    ^BDRBuggle:12: error: not found: value Y
	else if (m==Y) {recule();recule();}
                    ^